Try adding some GC flags to figure out what is going on in tests